Video scroll on mobile, map click fixes

--- a/less/style.less
+++ b/less/style.less
@@ -767,15 +767,40 @@ header {
 				height: 90%;
 				opacity: inherit;
 				overflow: hidden;
-				//pointer-events: none;
-				//display: none;
 			}
 			
-			.vidcontrol, .vidcontrol img {
+			.vidleft {
 				position: absolute;
-				width: 100%;
+				top: 0;
+				left: 0;
+				width: 40%;
 				height: 100%;
 				z-index: 10000;
+				
+				@media (min-width:450px) { display: none; }
+				
+				img {
+					position: absolute;
+					width: 100%;
+					height: 100%;
+				}
+			}
+			
+			.vidright {
+				position: absolute;
+				width: 40%;
+				top: 0;
+				right: 0;
+				height: 100%;
+				z-index: 10000;
+				
+				@media (min-width:450px) { display: none; }
+				
+				img {
+					position: absolute;
+					width: 100%;
+					height: 100%;
+				}
 			}
 		}
 		
